# ACWM

./: .gitignore  COLAB.md  README.md  pyproject.toml  train.py
configs/: acwm_v3_n1.yaml  default.yaml  forward_inverse.yaml  leworld.yaml
dataset/: __init__.py  trajectory.py
evaluation/: __init__.py  planning.py  prediction.py
experiment_tracking/: __init__.py  logger.py
losses/: __init__.py  latent.py  moment_sigreg.py
models/: __init__.py  acwm.py  forward_inverse_predictor.py  inverse_dynamics_head.py  v3_n1.py
models/encoder/: __init__.py  agent.py  common.py  environment.py
models/predictor/: __init__.py  motion_token.py  transitions.py
planner/: __init__.py  cem.py
scripts/: prepare_pusht.py  prepare_pusht_zarr.py
tests/: test_dataset.py  test_forward_inverse.py  test_losses.py  test_model.py  test_training_and_planner.py  test_v3_n1.py
trainer/: __init__.py  trainer.py
utils/: __init__.py  config.py  factory.py  registry.py
visualization/: __init__.py  plots.py
